--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <p>Hello, world!</p>
-    <a href="files/FRP_Android_7.apk">Download test</a>
+    <a href="https://www.mediafire.com/file/39nxa7kdfs55u1t/FRP_Android_7.apk/file">Download test</a>
 </body>
 
 </html>
