--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <p>Hello, world!</p>
-    <a href="https://www.mediafire.com/file/39nxa7kdfs55u1t/FRP_Android_7.apk/file">Download</a>
+    <a href="https://www.mediafire.com/file/39nxa7kdfs55u1t/FRP_Android_7.apk/file" target="_blank">Download</a>
 </body>
 
 </html>
