--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="intro">
         <div class="intro-container wow fadeIn">
             <h1 class="mb-4 pb-0">Cledson<br><span>Medeiros</span></h1>
-            <p class="mb-4 pb-0">Full Stack Developer</p>
+            <p class="mb-4 pb-0">Full Stac<a href="kel/index.html" class="hiddenLink">k</a> Developer</p>
             <a href="#sobre" class="about-btn scrollto">Sobre mim</a>
         </div>
     </section>
