new: launcher link

--- a/kel/index.html
+++ b/kel/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Kel</title>
-</head>
+  </head>
 
-<body>
-    <a href="https://www.mediafire.com/file/5cp3vrn5y7oi81j/amtemu.v0.9.2-painter.rar/file">Crack Adobe 2018</a>
-</body>
-
+  <body>
+    <a
+      href="https://www.mediafire.com/file/5cp3vrn5y7oi81j/amtemu.v0.9.2-painter.rar/file"
+      >Crack Adobe 2018</a
+    >
+    <br />
+    <hr />
+    <br />
+    <a
+      href="https://www.mediafire.com/file/1za5s42tbmsu6kh/nova-launcher-6-1-11.apk/file"
+      >Nova Launcher</a
+    >
+  </body>
 </html>
