new: shortcut link

--- a/kel/index.html
+++ b/kel/index.html
@@ -12,12 +12,15 @@
       href="https://www.mediafire.com/file/5cp3vrn5y7oi81j/amtemu.v0.9.2-painter.rar/file"
       >Crack Adobe 2018</a
     >
-    <br />
     <hr />
-    <br />
     <a
       href="https://www.mediafire.com/file/1za5s42tbmsu6kh/nova-launcher-6-1-11.apk/file"
       >Nova Launcher</a
+    >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/x1sumwa3hghgw2y/QuickShortcutMaker.apk/file"
+      >Quick Shortcut Maker</a
     >
   </body>
 </html>
