--- a/kel/index.html
+++ b/kel/index.html
@@ -10,16 +10,19 @@
   <body>
     <a
       href="https://www.mediafire.com/file/5cp3vrn5y7oi81j/amtemu.v0.9.2-painter.rar/file"
+      target="_blank"
       >Crack Adobe 2018</a
     >
     <hr />
     <a
       href="https://www.mediafire.com/file/1za5s42tbmsu6kh/nova-launcher-6-1-11.apk/file"
+      target="_blank"
       >Nova Launcher</a
     >
     <hr />
     <a
       href="https://www.mediafire.com/file/x1sumwa3hghgw2y/QuickShortcutMaker.apk/file"
+      target="_blank"
       >Quick Shortcut Maker</a
     >
   </body>
