new: shortcut link

--- a/kel/index.html
+++ b/kel/index.html
@@ -25,5 +25,17 @@
       target="_blank"
       >Quick Shortcut Maker</a
     >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/snplt26ja2kg2r9/Android_8_GAM.apk/file"
+      target="_blank"
+      >FRP 8</a
+    >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/ecslc9pvit6qyx8/FRP_Bypass.apk/file"
+      target="_blank"
+      >FRP BYPASS</a
+    >
   </body>
 </html>
