--- a/kel/index.html
+++ b/kel/index.html
@@ -27,15 +27,51 @@
     >
     <hr />
     <a
+      href="https://www.mediafire.com/file/4ow3frffgyzj0x6/FRP_Android_6.apk/file"
+      target="_blank"
+      >FRP 6</a
+    >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/ws4k78sycatjwjq/FRP_Android_7.apk/file"
+      target="_blank"
+      >FRP 7</a
+    >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/3s3jlen4j82syiz/FRP_Android_7-2.apk/file"
+      target="_blank"
+      >FRP 7 v2</a
+    >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/vv9r0mn6jevgdo1/FRP_Android_7.1.apk/file"
+      target="_blank"
+      >FRP 7.1</a
+    >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/hpakhan2qap0ekm/FRP_Android_7.1.1.apk/file"
+      target="_blank"
+      >FRP 7.1.1</a
+    >
+    <hr />
+    <a
       href="https://www.mediafire.com/file/snplt26ja2kg2r9/Android_8_GAM.apk/file"
       target="_blank"
       >FRP 8</a
     >
     <hr />
     <a
-      href="https://www.mediafire.com/file/ecslc9pvit6qyx8/FRP_Bypass.apk/file"
+      href="https://www.mediafire.com/file/i475mgvwkxzgc9v/ESFExplorer.apk/file"
       target="_blank"
-      >FRP BYPASS</a
+      >ES File Explorer</a
+    >
+    <hr />
+    <a
+      href="https://www.mediafire.com/file/8q8bs7kfeu2xmt4/gerenciadorcontagoogle.apk/file"
+      target="_blank"
+      >Gerenciador de Contas Google</a
     >
   </body>
 </html>
