--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                             </div>
                             <div class="col-md-10">
                                 <div class="speaker">
-                                    <img src="img/logos/1bu-logo.png" alt="1bu">
+                                    <img src="img/logos/gcc-logo.jpeg" alt="1bu">
                                 </div>
-                                <h4>1bu <span>Backend Developer</span></h4>
+                                <h4>GCC Web Solutions <span>Full Stack Developer</span></h4>
                                 <p>
-                                    Sistema Financeiro - Desenvolvimento em andamento
+                                    Sistema de Gestão Educacional - Desenvolvimento em andamento
                                 </p>
                             </div>
                         </div>
