--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">1bu</a>
+                        <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">GCC</a>
                     </li>
                 </ul>
 
@@ -150,7 +150,7 @@
                             </div>
                             <div class="col-md-10">
                                 <div class="speaker">
-                                    <img src="img/logos/gcc-logo.jpeg" alt="1bu">
+                                    <img src="img/logos/gcc-logo.jpeg" alt="GCC Logo">
                                 </div>
                                 <h4>GCC Web Solutions <span>Full Stack Developer</span></h4>
                                 <p>
