fix: PatyApp link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="#formacao">Formação</a></li>
                     <li><a href="#experiencia">Experiência</a></li>
                     <li><a href="#habilidades">Habilidades</a></li>
-                    <li><a href="http://teste.clmsoft.com.br">PatyApp</a></li>
+                    <li><a href="http://patyapp.clmsoft.com.br">PatyApp</a></li>
                     <!-- <li class="buy-tickets"><a href="">Contato</a></li> -->
                 </ul>
             </nav>
