fix: site icons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!-- Favicons -->
     <link href="img/favicon.png" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon-180x180.png">
+
 
     <!-- Google Fonts -->
     <link
