--- a/kel/index.html
+++ b/kel/index.html
@@ -8,7 +8,8 @@
 
   <title>Cledson Medeiros - Downloads</title>
 
-  <link rel="icon" type="image/png" href="assets/images/favicon.png" />
+  <link href="../img/favicon.png" rel="icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon-180x180.png">
 
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/packages/@fortawesome/fontawesome-free/css/all.css" />
