add: github social

--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                     <li><a href="#formacao">Formação</a></li>
                     <li><a href="#experiencia">Experiência</a></li>
                     <li><a href="#habilidades">Habilidades</a></li>
-                    <li><a href="https://github.com/cledsonmedeiros">Github</a></li>
-                    <li><a href="http://patyapp.clmsoft.com.br">PatyApp</a></li>
-                    <li><a href="http://teste.clmsoft.com.br">PatyApp Beta</a></li>
-                    <!-- <li class="buy-tickets"><a href="">Contato</a></li> -->
+                    <li><a href="https://github.com/cledsonmedeiros" target="_blank">Github</a></li>
+                    <li><a href="http://patyapp.clmsoft.com.br" target="_blank">PatyApp</a></li>
+                    <li><a href="http://teste.clmsoft.com.br" target="_blank">PatyApp Beta</a></li>
                 </ul>
             </nav>
         </div>
@@ -63,7 +62,6 @@
         <div class="intro-container wow fadeIn">
             <h1 class="mb-4 pb-0">Cledson<br><span>Medeiros</span></h1>
             <p class="mb-4 pb-0">Full Stack Developer</p>
-            <!-- <p class="mb-4 pb-0">Full Stac<a href="kel/index.html" class="hiddenLink">k</a> Developer</p> -->
             <a href="#sobre" class="about-btn scrollto">Sobre mim</a>
         </div>
     </section>
@@ -360,6 +358,9 @@
                             </a>
                             <a href="https://www.instagram.com/cledsonmedeiros.io/" target="_blank" class="instagram">
                                 <i class="fa fa-instagram"></i>
+                            </a>
+                            <a href="https://www.github.com/cledsonmedeiros" target="_blank" class="github">
+                                <i class="fa fa-github"></i>
                             </a>
                         </div>
                     </div>
