--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="https://github.com/cledsonmedeiros" target="_blank">Github</a></li>
                     <li><a href="http://patyapp.clmsoft.com.br" target="_blank">PatyApp</a></li>
-                    <li><a href="http://teste.clmsoft.com.br" target="_blank">PatyApp Beta</a></li>
+                    <!-- <li><a href="http://teste.clmsoft.com.br" target="_blank">PatyApp Beta</a></li> -->
                 </ul>
             </nav>
         </div>
