--- a/kel/index.html
+++ b/kel/index.html
@@ -94,6 +94,10 @@
             <span class="badge badge-pill badge-success p-2 mr-2 mb-2"><i class="fas fa-arrow-down"></i>
               KineMaster</span>
           </a>
+          <a href="https://www.mediafire.com/file/yhatdphq4dwqei8/super-backup-sms-and-contacts-2-2-62.apk/file" target="_blank">
+            <span class="badge badge-pill badge-success p-2 mr-2 mb-2"><i class="fas fa-arrow-down"></i>
+              Super Backup</span>
+          </a>
         </div>
       </div>
     </div>
