--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <li><a href="https://github.com/cledsonmedeiros" target="_blank">Github</a></li>
                     <li><a href="https://patyapp.clmsoft.com.br" target="_blank">PatyApp</a></li>
                     <li><a href="https://desfrut.clmsoft.com.br" target="_blank">Desfrut</a></li>
+                    <li><a href="https://desfrut.clmsoft.com.br" target="_blank">Desfrut</a></li>
                     <!-- <li><a href="http://teste.clmsoft.com.br" target="_blank">PatyApp Beta</a></li> -->
                 </ul>
             </nav>
