--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <li><a href="#experiencia">Experiência</a></li>
                     <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="https://github.com/cledsonmedeiros" target="_blank">Github</a></li>
+                    <li><a href="https://github.com/cledsonmedeiros" target="_blank">Github</a></li>
                     <li><a href="https://patyapp.clmsoft.com.br" target="_blank">PatyApp</a></li>
                     <li><a href="https://desfrut.clmsoft.com.br" target="_blank">Desfrut</a></li>
                     <li><a href="https://desfrut.clmsoft.com.br" target="_blank">Desfrut</a></li>
