--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
                     <p>Linha do tempo acadêmica</p>
                 </div>
 
-                <div class="row">
-
-                    <div class="col-lg-4 col-md-6">
-                    </div>
+                <div class="row justify-content-center">
 
                     <div class="col-lg-4 col-md-6">
                         <div class="speaker">
@@ -121,9 +118,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
                     </div>
 
                 </div>
