--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
 
     <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
     <!-- Bootstrap CSS File -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,6 +49,7 @@
                     <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="https://github.com/cledsonmedeiros" target="_blank">Github</a></li>
                     <li><a href="https://patyapp.clmsoft.com.br/#/" target="_blank">PatyApp</a></li>
+                    <li><a href="https://espacokids.clmsoft.com.br/#/" target="_blank">Espaço Kids</a></li>
                     <li><a href="https://desfrut.clmsoft.com.br/#/" target="_blank">Desfrut</a></li>
                     <!-- <li><a href="http://teste.clmsoft.com.br" target="_blank">PatyApp Beta</a></li> -->
                 </ul>
@@ -108,8 +107,7 @@
                                     </a>
                                 </p>
                                 <p>
-                                    <a href="https://portal.ifrn.edu.br/ifrn/campus/curraisnovos/cursos_atu/lateral/curso-superior-de-tecnologia-em-alimentos/sistemas-para-internet.html"
-                                        target="_blank">
+                                    <a href="https://portal.ifrn.edu.br/ifrn/campus/curraisnovos/cursos_atu/lateral/curso-superior-de-tecnologia-em-alimentos/sistemas-para-internet.html" target="_blank">
                                         Tecnologia em Sistemas para Internet
                                     </a>
                                 </p>
@@ -132,11 +130,11 @@
                     <p>Linha do tempo de experiências</p>
                 </div>
 
-                <ul class="nav nav-tabs" role="tablist">
+                <!-- <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">GCC</a>
                     </li>
-                </ul>
+                </ul> -->
 
                 <div class="tab-content row justify-content-center">
                     <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
@@ -151,7 +149,37 @@
                                 </div>
                                 <h4>GCC Web Solutions <span>Full Stack Developer</span></h4>
                                 <p>
-                                    Sistema de Gestão Educacional - Desenvolvimento em andamento
+                                    Sistema de Gestão de Filas - Desenvolvimento em andamento
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row schedule-item">
+                            <div class="col-md-2">
+                                <p>2019</p>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="speaker">
+                                    <img src="img/logos/patyapp-logo.png" alt="PatyApp Logo">
+                                </div>
+                                <h4>CLMSOFT <span>Full Stack Developer</span></h4>
+                                <p>
+                                    <a href="https://patyapp.clmsoft.com.br/#/" style="text-decoration: none; color: #0e1b4d;" target="_blank">PatyApp - Em produção</a>
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row schedule-item">
+                            <div class="col-md-2">
+                                <p>2020</p>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="speaker">
+                                    <img src="img/logos/espaco-kids-logo.png" alt="Espaço Kids Logo">
+                                </div>
+                                <h4>CLMSOFT <span>Full Stack Developer</span></h4>
+                                <p>
+                                    <a href="https://espacokids.clmsoft.com.br/#/" style="text-decoration: none; color: #0e1b4d;" target="_blank">Espaço Kids - Em produção</a>
                                 </p>
                             </div>
                         </div>
@@ -335,8 +363,7 @@
                         <h4>Contato</h4>
                         <p>
                             <strong>Telefone:</strong> +55 84 9.9600-3118<br>
-                            <strong>Email:</strong> <a
-                                href="mailto:cledson.lmedeiros@hotmail.com">cledson.lmedeiros@hotmail.com</a>
+                            <strong>Email:</strong> <a href="mailto:cledson.lmedeiros@hotmail.com">cledson.lmedeiros@hotmail.com</a>
                             <br>
                         </p>
                     </div>
@@ -344,8 +371,7 @@
                     <div class="col-lg-4 col-md-6 footer-links">
                         <h4>Redes Sociais</h4>
                         <div class="social-links">
-                            <a href="https://www.linkedin.com/in/cledson-medeiros-6b3966118/" target="_blank"
-                                class="linkedin">
+                            <a href="https://www.linkedin.com/in/cledson-medeiros-6b3966118/" target="_blank" class="linkedin">
                                 <i class="fa fa-linkedin"></i>
                             </a>
                             <a href="https://www.facebook.com/CledsondeLimaMedeiros" target="_blank" class="facebook">
